--- a/Hello.html.html
+++ b/Hello.html.html
@@ -11,7 +11,7 @@
    <h6>this is just practice</h6>
        <p><strong>Welcome to my First Page</strong></p>
        <a href="https://www.youtube.com/watch?v=R533DDds3RY"><button>Click Me its Free</button></a>
-       <img src="https://mimo.app/r/venn.png">
-       <img srch="download.jpg>
+       <img src="https://mimo.app/r/venn.png"/>
+       <img srch="download.jpg/>
   </body>
 <html>
