--- a/Hello.html.html
+++ b/Hello.html.html
@@ -12,6 +12,6 @@
        <p><strong>Welcome to my First Page</strong></p>
        <a href="https://www.youtube.com/watch?v=R533DDds3RY"><button>Click Me its Free</button></a>
        <img src="https://mimo.app/r/venn.png"/>
-       <img srch="download.jpg/>
+       <img src="/pictures/download.jpg"/>
   </body>
 <html>
