--- a/Hello.html.html
+++ b/Hello.html.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html>
+ <title> Mauricio Yam</title>
  <head>
        <title> SET08101 - Web Tech </title>
 </head>
@@ -13,6 +14,6 @@
        <a href="https://www.youtube.com/watch?v=R533DDds3RY"><button>Click Me its Free</button></a>
        <img src="https://mimo.app/r/venn.png"/>
        <img src="emulate/Pictures/Images/download.jpg"/>
-   <a href =" https :// siwells . github .io/ set08801 /">Module Website </a>
+   <a href ="https://en.wikipedia.org/wiki/Edinburgh"> </a>
   </body>
 <html>
