--- a/Hello.html.html
+++ b/Hello.html.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-
-<html>
- <title> Mauricio Yam</title>
- <head>
-       <title> SET08101 - Web Tech </title>
+<head>
+    <title>Mauricio Yam - SET08101 - Web Tech</title>
 </head>
-  <body>
-       <h1><em>Hello Web tech</em></h1>
-       <h1>Mauricio Yam</h1>
-       <h2><em>Aspiring Software Developer</em></h2>
-   <h6>this is just practice</h6>
-       <p><strong>Welcome to my First Page</strong></p>
-       <a href="https://www.youtube.com/watch?v=R533DDds3RY"><button>Click Me its Free</button></a>
-       <img src="https://mimo.app/r/venn.png"/>
-       <img src="emulate/Pictures/Images/download.jpg"/>
-   <a href ="https://en.wikipedia.org/wiki/Edinburgh"> </a>
-   <p> <STRONG>Lorem Imp</STRONG>
-              ">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
-   </p>
-  </body>
-<html>
+<body>
+<header>
+        <h1><em>Hello Web Tech</em></h1>
+        <h1>Mauricio Yam</h1>
+        <h2><em>Aspiring Software Developer</em></h2>
+</header>
+<main>
+        <h3>This is just practice</h3>
+        <p><strong>Welcome to my First Page</strong></p>
+        <a href="https://www.youtube.com/watch?v=R533DDds3RY"><button>Click Me, It's Free</button></a>
+        <img src="https://mimo.app/r/venn.png" alt="Venn Diagram"/>
+        <img src="emulate/Pictures/Images/download.jpg"/>
+        
+<p>
+      <strong>Lorem Ipsum</strong>: 
+   Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+			when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
+			not only five centuries but also the leap into electronic typesetting, remaining essentially unchanged. It was 
+			popularized in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
+			with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+</p>
+</main>
+<footer>
+        <a href="https://en.wikipedia.org/wiki/Edinburgh">Learn more about Edinburgh</a>
+        <a href="
+</footer>
+</body>
+</html>
