--- a/Hello.html.html
+++ b/Hello.html.html
@@ -23,6 +23,21 @@
 			popularized in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
 			with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 </p>
+<table>
+    <caption>Employee Information</caption>
+        <tr>
+            <th>Name</th>
+            <th>Position</th>
+            <th>Department</th>
+            <th>Salary</th>
+        </tr>
+        <tr>
+            <td>John Doe</td>
+            <td>Software Engineer</td>
+            <td>Development</td>
+            <td>$80,000</td>
+        </tr>
+ </table>
 </main>
 <footer>
         <a href="https://en.wikipedia.org/wiki/Edinburgh">Learn more about Edinburgh</a>
