--- a/Hello.html.html
+++ b/Hello.html.html
@@ -37,7 +37,12 @@
             <td>Development</td>
             <td>$80,000</td>
         </tr>
- </table>
+</table>
+<ul>
+    <li>1)Tray of eggs</li>
+    <li>2)Bread</li>
+    <li>3)Soft Drink</li>
+</ul>
 </main>
 <footer>
         <a href="https://en.wikipedia.org/wiki/Edinburgh">Learn more about Edinburgh</a>
