--- a/Hello.html.html
+++ b/Hello.html.html
@@ -44,6 +44,11 @@
     <li>2)Bread</li>
     <li>3)Soft Drink</li>
 </ul>
+<p>
+    This course is part of the <a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank">Web Tech</a> program at the 
+    <a href="https://en.wikipedia.org/wiki/Edinburgh"target="blank">School of Computing</a> 
+    <a href="https://en.wikipedia.org/wiki/Edinburgh">Edinburgh Napier University</a>.
+</p>
 
 </main>
 <footer>
