--- a/Hello.html.html
+++ b/Hello.html.html
@@ -45,9 +45,10 @@
     <li>3)Soft Drink</li>
 </ul>
 <p>
-    This course is part of the <a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank">Web Tech</a> program at the 
-    <a href="https://en.wikipedia.org/wiki/Edinburgh"target="blank">School of Computing</a> 
-    <a href="https://en.wikipedia.org/wiki/Edinburgh">Edinburgh Napier University</a>.
+    <p>
+<a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank"> Web Tech</a> is a module that is run in the 
+<a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank"> School of Computing</A> at 
+<a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank"> Edinburgh Napier University.</a>
 </p>
 
 </main>
