--- a/Hello.html.html
+++ b/Hello.html.html
@@ -46,7 +46,7 @@
 </ul>
 <p>
     <p>
-<a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank"> Web Tech</a> is a module that is run in the 
+<a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank" rel="noopener noreferrer"> Web Tech</a> is a module that is run in the 
 <a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank"> School of Computing</A> at 
 <a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank"> Edinburgh Napier University.</a>
 </p>
