--- a/Hello.html.html
+++ b/Hello.html.html
@@ -13,6 +13,9 @@
         <p><strong>Welcome to my First Page</strong></p>
         <a href="https://www.youtube.com/watch?v=R533DDds3RY"><button>Click Me, It's Free</button></a>
         <img src="https://mimo.app/r/venn.png" alt="Venn Diagram"/>
+<a href="https://mimo.app/r/venn.png" alt="Venn Diagram" target="_blank" rel="noopener noreferrer">
+<img src="https://mimo.app/r/venn.png" alt="Venn Diagram" style="width: 300px; height: auto;">
+</a>
         <img src="emulate/Pictures/Images/download.jpg"/>
 <hr>        
 <p>
