--- a/Hello.html.html
+++ b/Hello.html.html
@@ -9,32 +9,34 @@
         <h2><em>Aspiring Software Developer</em></h2>
 </header>
 <main>
+	<section>
         <h3>This is just practice</h3>
         <p><strong>Welcome to my First Page</strong></p>
         <a href="https://www.youtube.com/watch?v=R533DDds3RY"><button>Click Me, It's Free</button></a>
+	</section>
 <hr>
-        <img src="https://mimo.app/r/venn.png" alt="Venn Diagram"/>
-<a href="https://mimo.app/r/venn.png" alt="Venn Diagram" target="_blank" rel="noopener noreferrer">
-<img src="https://mimo.app/r/venn.png" alt="Venn Diagram" style="width: 300px; height: auto;">
-</a>
-	
+	<section>
+        <a href="https://mimo.app/r/venn.png" alt="Venn Diagram" target="_blank" rel="noopener noreferrer">
+        <img src="https://mimo.app/r/venn.png" alt="Venn Diagram" style="width: 300px; height: auto;"></a>
+	</section>
 <hr>        
-<p>
-      <strong>Lorem Ipsum</strong>: 
-   Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-   when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
-   not only five centuries but also the leap into electronic typesetting, remaining essentially unchanged. It was 
-   popularized in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
-   with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-</p>
+      <section>
+      <p><strong>Mauricio Yam</strong>: 
+      Do remember Studying Computing opens up a world of endless possibilities! It empowers you to solve real-world problems,
+      innovate with technology, and create solutions that can impact millions of lives. Whether you're building software,
+      designing AI, or improving cybersecurity, computing gives you the skills to shape the future. Plus, it fosters creativity,
+      logical thinking, and problem-solving—skills that are valuable in any field. The best part? There's always something new 
+      to learn, making it an exciting and dynamic journey never forget that!.</p>
+      </section>	
 <hr>	
-<table>
-    <caption>Employee Information</caption>
+     <section>	
+     <table>
+     <caption>Employee Information</caption>
         <tr>
-            <th>Name</th>
-            <th>Position</th>
-            <th>Department</th>
-            <th>Salary</th>
+            <th Scope="col">Name</th>
+            <th Scope="col">Position</th>
+            <th Scope="col">Department</th>
+            <th> Scope="col">Salary</th>
         </tr>
         <tr>
             <td>Mauricio Yam</td>
@@ -42,22 +44,23 @@
             <td>Development</td>
             <td>$80,000</td>
         </tr>
-</table>
-<ul>
-    <li>1)Tray of eggs</li>
-    <li>2)Bread</li>
-    <li>3)Soft Drink</li>
-</ul>
-<p>
-    <p>
-<a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank" rel="noopener noreferrer"> Web Tech</a> is a module that is run in the 
-<a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank"> School of Computing</A> at 
-<a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank"> Edinburgh Napier University.</a>
-</p>
-
-</main>
-<footer>
+     </table>
+     </section>
+     <section>
+        <ul>
+           <li> Tray of eggs </li>
+           <li> Bread </li>
+           <li> Soft Drink </li>
+	</ul>
+     </section>	
+     <section>
+         <p><a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank" rel="noopener noreferrer"> Web Tech</a> is a module that is run in the 
+	 <a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank"> School of Computing</A> at 
+	 <a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank"> Edinburgh Napier University.</a></p>
+     </section>
+     </main>
+     <footer>
         <a href="https://en.wikipedia.org/wiki/Edinburgh">Learn more about Edinburgh</a>
-</footer>
+     </footer>
 </body>
 </html>
