--- a/Hello.html.html
+++ b/Hello.html.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta charset ="UTF -8" />
     <title>Mauricio Yam - SET08101 - Web Tech</title>
 </head>
 <body>
@@ -36,7 +37,7 @@
             <th Scope="col">Name</th>
             <th Scope="col">Position</th>
             <th Scope="col">Department</th>
-            <th> Scope="col">Salary</th>
+            <th Scope="col">Salary</th>
         </tr>
         <tr>
             <td>Mauricio Yam</td>
@@ -60,7 +61,8 @@
      </section>
      </main>
      <footer>
-        <a href="https://en.wikipedia.org/wiki/Edinburgh">Learn more about Edinburgh</a>
+	 <h1>Copyrights to Mauricio Yam - Practice - All rights Reserved</h1>    
+        <a href="https://www.w3schools.com/html/html_exercises.asp">Learn more about coding</a>
      </footer>
 </body>
 </html>
