--- a/Hello.html.html
+++ b/Hello.html.html
@@ -19,7 +19,7 @@
 	<section>
         <a href="https://mimo.app/r/venn.png" alt="Venn Diagram" target="_blank" rel="noopener noreferrer">
         <img src="https://mimo.app/r/venn.png" alt="Venn Diagram" style="width: 300px; height: auto;"></a>
-	<img Src="https://github.com/Mawa-Jr/set08801/commit/5abdebc5c75d3cc7cf32109a7c63bf9d6324fe55#diff-fd39f10804b3f430689022c60d1c806d79131b6a51df9167280221ae0667e285/sunbreeze-belize-hotel-dive-resort20-1170x630.png">
+	<img Src="C:\Users\mauri\Documents\lab1\Images/vmask.jpg">
 	</section>
 <hr>        
       <section>
