--- a/Hello.html.html
+++ b/Hello.html.html
@@ -19,7 +19,7 @@
 	<section>
         <a href="https://mimo.app/r/venn.png" alt="Venn Diagram" target="_blank" rel="noopener noreferrer">
         <img src="https://mimo.app/r/venn.png" alt="Venn Diagram" style="width: 300px; height: auto;"></a>
-	<img Src="https:github.com/Pictures/Images/sunbreeze-belize-hotel-dive-resort20-1170x630.png">
+	<img Src="https://github.com/Mawa-Jr/set08801/tree/main/Pictures/Images/sunbreeze-belize-hotel-dive-resort20-1170x630.png">
 	</section>
 <hr>        
       <section>
