--- a/Hello.html.html
+++ b/Hello.html.html
@@ -60,6 +60,13 @@
 	 <a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank"> School of Computing</A> at 
 	 <a href="https://en.wikipedia.org/wiki/Edinburgh"Target="Blank"> Edinburgh Napier University.</a></p>
      </section>
+	<section>
+		<a href="https://www.warnerbros.com/movies/harry-potter-complete-8-film-collection "Target="Blank" rel="noopener noreferrer"> Favorite film collection</a>
+		<a href="https://www.fcbarcelona.com/en/ "Target="Blank" rel="noopener noreferrer"> Favorite Soccer Team</a>
+		<a href="https://open.spotify.com/track/2REYjIWDZUy2BwHrlhRldC "Target="Blank" rel="noopener noreferrer"> Favorite music Streaming page </a>
+		<a href="https://www.youtube.com/watch?v=-jEDdFm3Nx0 "Target="Blank" rel="noopener noreferrer"> Favorite Song</a>
+		<a href="https://www.max.com/bz/en "target="noopener noreferrer"> Favorite Streaming page</a>
+        </section>
      </main>
      <footer>
 	 <h1>Copyrights to Mauricio Yam - Practice - All rights Reserved</h1>    
