--- a/Hello.html.html
+++ b/Hello.html.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset ="UTF -8" />
     <title>Mauricio Yam - SET08101 - Web Tech</title>
+	<style>h1 {color:red;</style>
 </head>
 <body>
 <header>
