--- a/Hello.html.html
+++ b/Hello.html.html
@@ -2,7 +2,8 @@
 <head>
     <meta charset ="UTF -8" />
     <title>Mauricio Yam - SET08101 - Web Tech</title>
-	<style>h1 {color:gray;}</style>
+	<style> type=“text/css> h1 {color: gray;}
+	</style>
 </head>
 <body>
 <header>
