--- a/Hello.html.html
+++ b/Hello.html.html
@@ -3,7 +3,7 @@
     <meta charset ="UTF -8" />
     <title>Mauricio Yam - SET08101 - Web Tech</title>
 	<style type=“text/css>
-		h1{color:green;}
+		h1{color: purple;}
 	</style>
 </head>
 <body>
