--- a/Hello.html.html
+++ b/Hello.html.html
@@ -2,15 +2,13 @@
 <head>
     <meta charset ="UTF -8" />
     <title>Mauricio Yam - SET08101 - Web Tech</title>
-	<style type=“text/css>
-		h1{color: purple;}
-	</style>
+	<style>	h1{color:purple;} </style>
 </head>
 <body>
 <header>
-        <h1><em>Hello Web Tech</em></h1>
-        <h1>Mauricio Yam</h1>
-        <h2><em>Aspiring Software Developer</em></h2>
+        <h1 style ="text-align:Center"> <em>Hello Web Tech</em></h1>
+        <h1 style ="text-align:Center"> Mauricio Yam</h1>
+        <h2 style ="text-align:Center"> <em>Aspiring Software Developer</em></h2>
 </header>
 <main>
 	<section>
