--- a/Hello.html.html
+++ b/Hello.html.html
@@ -17,11 +17,11 @@
         <a href="https://www.youtube.com/watch?v=R533DDds3RY"><button>Click Me, It's Free</button></a>
 	</section>
 <hr>
-	<section>
+	<Div>
         <a href="https://mimo.app/r/venn.png" alt="Venn Diagram" target="_blank" rel="noopener noreferrer">
         <img src="https://mimo.app/r/venn.png" alt="Venn Diagram" style="width: 300px; height: auto;"></a>
-	<img Src="https://github.com/Mawa-Jr/set08801/blob/main/Pictures/Images/sunbreeze-belize-hotel-dive-resort20-1170x630.png">
-	</section>
+	<img https:"//github.com/Mawa-Jr/set08801/blob/main/Pictures/Images/sunbreeze-belize-hotel-dive-resort20-1170x630.png">
+	</div>
 <hr>        
       <section>
       <p><strong>Mauricio Yam</strong>: 
