--- a/Hello.html.html
+++ b/Hello.html.html
@@ -20,7 +20,7 @@
 	<Div>
         <a href="https://mimo.app/r/venn.png" alt="Venn Diagram" target="_blank" rel="noopener noreferrer">
         <img src="https://mimo.app/r/venn.png" alt="Venn Diagram" style="width: 300px; height: auto;"></a>
-	<img https:"//github.com/Mawa-Jr/set08801/blob/main/Pictures/Images/sunbreeze-belize-hotel-dive-resort20-1170x630.png">
+	<img src:"image/sunbreeze-belize-hotel-dive-resort20-1170x630.png">
 	</div>
 <hr>        
       <section>
